/**
 * Discord API service
 *
 * This file contains all messages and services currently supported by Discord Proxy
 */
syntax = "proto3";

package discord_api;

message Channel {
  uint64 id = 1;
  enum Type {
    GUILD_TEXT = 0;
    GUILD_VOICE = 1;
    GROUP_DM = 2;
    GUILD_CATEGORY = 3;
    GUILD_NEWS = 4;
    PRODUCTS = 5;
    GUILD_STORE = 6;
  }
  Type type = 2;
  uint64 guild_id = 3;
  int32 position = 4;
  // tbd //
  string name = 6;
  string topic = 7;
}




message Embed {
  string title = 1;
  string type = 2;
  string description = 3;
  string url = 4;
  string timestamp = 5;
  int32 color = 6;
  message Footer {
    string text = 1;
    string icon_url = 2;
    string proxy_icon_url = 3;
  }
  Footer footer = 7;
  message Image {
    string url = 1;
    string proxy_icon_url = 2;
    int32 height = 3;
    int32 width = 4;
  }
  Image image = 8;
  message Thumbnail {
    string url = 1;
    string proxy_url = 2;
    int32 height = 3;
    int32 width = 4;
  }
  Thumbnail thumbnail = 9;
  message Video {
    string url = 1;
    string proxy_icon_url = 2;
    int32 height = 3;
    int32 width = 4;
  }
  Video video = 10;
  message Provider {
    string name = 1;
    string url = 2;
  }
  Provider provider = 11;
  message Author {
    string name = 1;
    string url = 2;
    string icon_url = 3;
    string proxy_icon_url = 4;
  }
  Author author = 12;
  message Field {
    string name = 1;
    string value = 2;
    bool inline = 3;
  }
  repeated Field fields = 13;
}

message SendDirectMessageRequest {
  uint64 user_id = 1;
  string content = 2;
  Embed embed = 3;
}

message SendDirectMessageResponse {
}

message GetGuildChannelsRequest {
  uint64 guild_id = 1;
}

message GetGuildChannelsResponse {
  repeated Channel channels = 1;
}

// Provides access to the Discord API
service DiscordApi {
  // Send a direct message to a user
  rpc SendDirectMessage (SendDirectMessageRequest) returns (SendDirectMessageResponse) {}
  // Get the list of channel for a guild
  rpc GetGuildChannels (GetGuildChannelsRequest) returns (GetGuildChannelsResponse) {}
}
